--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "graphql": "^16.3.0",
     "querystring": "^0.2.1",
     "react": "17.0.1",
+    "react-content-loader": "^6.2.0",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "react-query": "^3.34.16",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
     "tailwindcss": "^3.0.23",
     "twrnc": "^3.0.2"
   },
